# rust_frontend_and_backend_template

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
embed-wasm/: Cargo.toml  README.md  README.tpl
embed-wasm-build/: Cargo.toml  README.md  README.tpl
embed-wasm-build/src/: lib.rs
embed-wasm/src/: lib.rs
frontend/: Cargo.toml  build.rs
frontend/src/: lib.rs
frontend/wasm/: Cargo.toml
frontend/wasm/src/: lib.rs  main.rs
frontend/wasm/static/css/: app.css
my-frontend/: Cargo.toml  build.rs
my-frontend/src/: lib.rs
my-frontend/wasm/: .gitignore  Cargo.toml
my-frontend/wasm/src/: lib.rs
my-frontend/wasm/static/: app.css
my-server/: Cargo.toml
my-server/src/: main.rs
my-types/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
shared-types/: Cargo.toml
shared-types/src/: lib.rs
