[package]
name = "embed-wasm-build"
version = "0.1.0-alpha"
authors = ["inanna malick <inanna@recursion.wtf>"]
edition = "2018"
description = "embed rust wasm build ouput in native binaries"
license = "MIT"
keywords = ["web", "webasm", "build"]

[dependencies]
ignore = "0.4.14"
cargo-web = "=0.6.26"
structopt = "0.2"
phf_codegen = "0.8.0"