[package]
name = "my-frontend"
version = "0.1.0"
authors = ["inanna malick <inanna@recursion.wtf>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
phf = { version = "0.8.0", features = ["macros"] }

[build-dependencies]
phf = "0.8.0"
ignore = "0.4.14"
cargo-web = "=0.6.26"
structopt = "0.2"
