[package]
name = "my-server"
version = "0.1.0"
authors = ["inanna malick <inanna@recursion.wtf>"]
edition = "2018"

[dependencies]
my-frontend = { path = "../my-frontend" }
warp = "0.2.1"
tokio = { version = "0.2.18", features = ["macros"] }
tonic = "0.1.1"
serde = "1.0"
serde_json = "1.0"
mime_guess = "2.0"
handlebars = "1.0.0"
hyper = "0.13.2"
headers = "0.3.1"
bytes = "0.5.3"
my-types = { path = "../my-types"}
futures = "0.3.4"
