[package]
name = "server"
version = "0.1.0"
authors = ["inanna malick <inanna@recursion.wtf>"]
edition = "2018"

[dependencies]
frontend = { path = "../frontend" }
warp = "0.2.1"
tokio = { version = "0.2.18", features = ["macros"] }
tonic = "0.1.1"
serde = "1.0"
serde_json = "1.0"
handlebars = "1.0.0"
hyper = "0.13.2"
headers = "0.3.1"
bytes = "0.5.3"
shared-types = { path = "../shared-types"}
futures = "0.3.4"
